Glow. Fix rendering formulas. Lots of other improvements

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="src/config.js"></script>
     <script src="src/view_controls.js"></script>
 
+    <script src="src/rendering/blur.js"></script>
     <script src="src/rendering/lighting.js"></script>
     <script src="src/rendering/render.js"></script>
 
